# star_solution

./: .gitignore  README.MD  draft.ipynb  package.xml  setup.cfg  setup.py
config/: cartographer_2d.lua  config.yaml  rviz_config.rviz
launch/: bring_cartographer.launch.py  bring_up.launch.py  cartographer_2d.launch.py
star_solution/: cloud_preproc_node.py  lidar_transformer.py  loop_closure_node.py  map_node.py  odom_node.py  pose_graph_node.py  scan_builder_node.py  solution1.py  utils.py
