<?xml version="1.0"?>
<package format="3">
  <name>star_solution</name>
  <version>0.1.0</version>
  <description>Example ROS2 ament_python package with pub/sub, RViz and rosbag play.</description>

  <maintainer email="you@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>rosbag2</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
